--- a/cv/en/cv.tex
+++ b/cv/en/cv.tex
@@ -61,7 +61,7 @@
 \subsection{Jobs}
 \cventry{2003--2004}{Temporary works}{}{Vernon}{}{Inventories in hyper-stores}                % arguments 3 to 6 are optional
 \cventry{2006}{Internship in an IT department}{SGT}{Champs-sur-Marne}{}{Installation of computers for customers of the company}                % arguments 3 to 6 are optional
-\cventry{2007}{Internship before specialization in E}{Ordissimo}{Paris}{}{Development of the file manager Sfiler in C++}                % arguments 3 to 6 are optional
+\cventry{2007}{Internship before specialization in EPITA}{Ordissimo}{Paris}{}{Development of the file manager Sfiler in C++}                % arguments 3 to 6 are optional
 \subsection{Tutoring}
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}% arguments 3 to 6 are optional
 \cventry{2005--2006}{Mathematics support}{}{}{}{Courses for a high school student}% arguments 3 to 6 are optional
