change CV for Thales integration.

--- a/cv/fr/cv.tex
+++ b/cv/fr/cv.tex
@@ -26,7 +26,7 @@
 \firstname{Olivier}
 \familyname{D\'etour}
 \birth{N\'e le 18 septembre 1985}{\`a Clermont Ferrand}
-\title{\'Etudiant EPITA}               % optional, remove the line if not wanted
+\title{Stagiaire Thales Communication}               % optional, remove the line if not wanted
 \address{33 rue Croulebarbe}{75013 Paris}    % optional, remove the line if not wanted
 \mobile{06 13 15 85 55}                    % optional, remove the line if not wanted
 %\phone{phone (optional)}                      % optional, remove the line if not wanted
@@ -60,9 +60,9 @@
 
 \section{Exp\'eriences}
 \subsection{Emplois}
-\cventry{2003--2004}{Missions d'int\'erim}{}{Vernon}{}{Inventaires dans des grandes surfaces}                % arguments 3 to 6 are optional
 \cventry{2006}{Stage dans un service technique}{SGT}{Champs-sur-Marne}{}{Installation de machines pour les clients de la soci\'et\'e}                % arguments 3 to 6 are optional
 \cventry{2007}{Stage de tronc commun}{Ordissimo}{Paris}{}{Developpement du gestionnaire de fichier Sfiler en C++}                % arguments 3 to 6 are optional
+\cventry{2009}{Stage de fin d'\'etude}{Thales Communication}{Colombes}{}{\'Etude de l'architecture Cavium et Linux SMP}                % arguments 3 to 6 are optional
 \subsection{Tutorat}
 %\cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}% arguments 3 to 6 are optional
 \cventry{2005--2006}{Soutien de math\'ematiques}{}{}{}{Cours pour une \'el\`eve de 1\iere ES}% arguments 3 to 6 are optional
@@ -70,8 +70,10 @@
 
 \section{Comp\'etences Informatique}
 %\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
-\cvcomputer{Langages:}{C, C++, Java, Ruby, Delphi, Caml, ASM, \LaTeX, ScriptShell (Unix), Python, Sed/Awk, Flex/Bison, Autotools}{Syst\`emes:}{Linux (Gentoo, Debian, Arch\dots), BSD (OpenBSD, FreeBSD, NetBSD), Windows (XP, 2003, Vista)}
-\cvcomputer{Projets EPITA:}{Shell (42sh), Compilateur (Tiger), Syst\`eme (Kaneton), Projets math\'ematiques}{Concepts:}{Virologie, Cryptologie, Architecture de s\'ecurit\'e, Gestion de risque, Techniques d'attaques}
+\cvcomputer{Langages:}{C, C++, Java, Ruby, Delphi, Caml, ASM, \LaTeX, ScriptShell (Unix), Python, Sed/Awk, Flex/Bison, Autotools}
+	   {Syst\`emes:}{Linux SMP, BSD, Carte Cavium (CN38XX)}
+\cvcomputer{Projets EPITA:}{Shell (42sh), Compilateur (Tiger), Syst\`eme (Kaneton), Projets math\'ematiques}
+	   {Concepts:}{Virologie, Cryptologie, Architecture de s\'ecurit\'e, Gestion de risque, Techniques d'attaques}
 
 \section{Langues}
 %\cvlanguage{language 1}{Skill level}{Comment}
