--- a/cv/fr/cv.tex
+++ b/cv/fr/cv.tex
@@ -10,7 +10,7 @@
 
 % moderncv themes
 %\moderncvtheme[blue]{casual}                 % optional argument are 'blue' (default), 'orange', 'red', 'green', 'grey' and 'roman' (for roman fonts, instead of sans serif fonts)
-\moderncvtheme[blue]{classic}                % idem
+\moderncvtheme[green]{classic}                % idem
 
 % character encoding
 \usepackage[utf8]{inputenc}                   % replace by the encoding you are using
@@ -25,10 +25,10 @@
 % personal data
 \firstname{Olivier}
 \familyname{Détour}
-\birth{Né le 18 septembre 1985}{à Clermont Ferrand}
-\title{\Large{Ingénieur système \& télécom}}
-\address{33 rue Croulebarbe}{75013 Paris}	% optional, remove the line if not wanted
-\mobile{06 13 15 85 55}				% optional, remove the line if not wanted
+%\birth{Né le 18 septembre 1985}{Clermont Ferrand}
+\title{\Large{Ingénieur Système \& Télécom}}
+\address{84 rue Marcadet}{75018 Paris}		% optional, remove the line if not wanted
+\mobile{+336 13 15 85 55}				% optional, remove the line if not wanted
 %\phone{phone (optional)}			% optional, remove the line if not wanted
 %\fax{fax (optional)}				% optional, remove the line if not wanted
 \email{detour.olivier@gmail.com}		% optional, remove the line if not wanted
@@ -45,6 +45,27 @@
 \begin{document}
 \maketitle
 
+\section{Expériences}
+\subsection{Emplois}
+\cventry{2009--2012}{Ingénieur Système \& Télécom}{Thales Communication}{Colombes}{France}
+{
+  \begin{itemize}
+    \renewcommand{\labelitemi}{$\bullet$  }
+    \item Prototype Nexium Way: Creation d'un routeur Thales implémentant les protocoles RSVP-TE et MPLS-TE via réservation SIP
+    \item Création d'une abstraction VoIP SIP/H323 pour créer des applications indépendantes de la pile VoIP
+    \item Implémentation de la RFC 6143 (IP/ICMP/v4/v6 Translation Algorithm) dans le noyau Linux
+    \item Implémentation d'une segmentation de paquets niveau 2 avec acquittement dans un NetDevice Linux
+    \item Implémentation d'un protocole d'émission point \`a multipoints et de découverte de voisins
+  \end{itemize}
+}					% arguments 3 to 6 are optional
+\cventry{2009}{Stage de fin d'étude}{Thales Communication}{Colombes}{France}
+{
+  Étude de Linux sur l'architecture Cavium (Architecture dédiée aux performances télécom)
+}					% arguments 3 to 6 are optional
+\subsection{Tutorat}
+\cventry{2011}{Vacataire}{ENSTA}{}{}{Encadrement d'un projet informatique (\textit{Mini NetFilter})}			% arguments 3 to 6 are optional
+\cventry{2008}{Assistant \textit{YAKA/ACU 2009}}{EPITA}{}{}{Encadrement de la Piscine et de nombreux projets}		% arguments 3 to 6 are optional
+
 \section{Formation}
 \cventry{2008}{Spécialisation Système, Réseaux et Sécurité}{EPITA}{}{\textit{Le Kremlin-Bic\^etre 94270}}{}	% arguments 3 to 6 are optional
 \cventry{2004--2007}{Tronc commun}{EPITA}{}{\textit{Le Kremlin-Bic\^etre 94270}}{}				% arguments 3 to 6 are optional
@@ -57,22 +78,13 @@
 %\cvline{supervisors}{Supervisors}
 %\cvline{description}{\small Short thesis abstract}
 
-\section{Expériences}
-\subsection{Emplois}
-\cventry{2009--2011}{Ingénieur système \& télécom}{Thales Communication}{Colombes}{}{}					% arguments 3 to 6 are optional
-\cventry{2009}{Stage de fin d'étude}{Thales Communication}{Colombes}{}{Étude de Linux sur l'architecture Cavium}	% arguments 3 to 6 are optional
-\subsection{Tutorat}
-\cventry{2011}{Vacataire ENSTA}{}{}{}{Encadrement d'un projet informatique (\textit{Mini NetFilter})}			% arguments 3 to 6 are optional
-\cventry{2008}{Assistant EPITA \textit{YAKA/ACU 2009}}{}{}{}{Encadrement de la Piscine et de nombreux projets}		% arguments 3 to 6 are optional
-
-\section{Compétences Informatique}
+\section{Compétences Informatiques}
 %\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
 \cvcomputer{\textbf{Langages:}}{C, C++, Java, Ruby, Delphi, Caml, ASM, \LaTeX, ScriptShell (\textit{bash, zsh}), Python, Sed/Awk, Flex/Bison, Autotools}
-	   {\textbf{Systèmes:}}{Linux (\textit{Gentoo, Debian, Arch\dots}), BSD (\textit{OpenBSD, FreeBSD, NetBSD})}
+	   {\textbf{Télécom:}}{Ethernet, ATM, MPLS-TE, IP, ARP, TCP, UDP, TLS, RSVP-TE, OSPF-TE, SIP, H225/H245}
+
 \cvcomputer{\textbf{Projets EPITA:}}{Shell (\textit{42sh}), Compilateur (\textit{Tiger}), Micro noyau (\textit{Kaneton}), Projets mathématiques}
 	   {\textbf{Concepts:}}{Virologie, Cryptologie, Architecture de sécurité, Gestion de risque, Techniques d'attaques, Architectures logicielles}
-\cvcomputer{}{}
-	   {\textbf{Télécom:}}{Ethernet, ATM, MPLS-TE, IP, ARP, TCP, UDP, RSVP-TE, OSPF-TE, SIP, H225/H245}
 
 \section{Langues}
 %\cvlanguage{language 1}{Skill level}{Comment}
@@ -90,7 +102,7 @@
 %\cvlistitem{Item 1}
 %\cvlistitem{Item 2}
 %\cvlistitem[+]{Item 3}            % optional other symbol
-
+%
 %\section{Extra 2}
 %\cvlistdoubleitem[\Neutral]{Item 1}{Item 4}
 %\cvlistdoubleitem[\Neutral]{Item 2}{Item 5}
