--- a/letters/free/letter.tex
+++ b/letters/free/letter.tex
@@ -53,7 +53,7 @@
       \indent Dès mon arrivée au sein de Thales, j'ai mis en pratique les connaissances
       acquises lors de ma formation. Elles ont été renforcées grâce \`a une expérience
       de 3 ans au sein du centre de compétences système et télécom SAT/NSS.  J'ai acquis
-      de véritables connaissances système et renforcer mon savoir-faire en travaillant
+      de véritables connaissances système et renforcé mon savoir-faire en travaillant
       d'une part avec du matériel embarqué et d'autre part sur des projets télécoms
       d'envergures. Sur ces projets, j'ai collaboré avec des professionnels expérimentés
       qui dans nos échanges m'ont permis d'acquérir de nombreuses bases d'architecture
