--- a/letters/free/letter.tex
+++ b/letters/free/letter.tex
@@ -24,7 +24,7 @@
 \def\phone{\Telefon{} +336 13 15 85 55}
 
 \def\companyname{Freebox}
-\def\companyservice{Maxime Bison}
+\def\companyservice{Maxime Bizon}
 \def\companyzip{75008}
 \def\companycity{Paris}
 
