--- a/cv/fr/cv.tex
+++ b/cv/fr/cv.tex
@@ -3,13 +3,15 @@
 % moderncv themes
 %\moderncvtheme[blue]{casual}
 \moderncvtheme[blue]{classic}											% optional argument are 'blue' (default),
+\moderncvstyle{classic}                        % las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
+\moderncvcolor{blue}                          % opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
 														% 'orange', 'red', 'green', 'grey' and
 														% 'roman' (for roman fonts, instead of
 														% sans serif fonts)
 
 % character encoding
 \usepackage[utf8]{inputenc}											% replace by the encoding you are using
-\usepackage[frenchb]{babel}
+\usepackage[frenchb,english]{babel}
 
 % adjust the page margins
 \usepackage[scale=0.91]{geometry}
@@ -22,8 +24,7 @@
 % personal data
 \firstname{Olivier}
 \familyname{Détour}
-\birth{Né le 18 septembre 1985}{}
-\title{\textbf{Ingénieur système \& télécom} \\\\ \Large{> 3 ans d'expérience}}
+\title{\textbf{Ingénieur système \& télécom}}
 \address{84 rue Marcadet}{75018 Paris}										% optional, remove the line if not wanted
 \mobile{+336 13 15 85 55}											% optional, remove the line if not wanted
 %\phone{phone (optional)}											% optional, remove the line if not wanted
@@ -65,32 +66,26 @@
     \item Prototype Nexium Way: Création d'un routeur Thales implémentant les protocoles RSVP-TE et
 	MPLS-TE via réservation SIP
   \end{itemize}
-}														% arguments 3 to 6 are optional
+}
 \cventry{2009}{Stage de fin d'étude}{Thales Communication}{\textit{Colombes}}{}
 {
   Étude de Linux sur l'architecture Cavium (Architecture dédiée aux performances télécom)
-}														% arguments 3 to 6 are optional
+}
 
 \subsection{Tutorat}
 \cventry{2011}{Vacataire}{ENSTA}{\textit{Paris}}{}
 	      {Encadrement du projet informatique \textit{Mini NetFilter} en langage C pour les étudiants
-		de 1\iere{} année}		 								% arguments 3 to 6 are optional
+		de 1\iere\ année}
 \cventry{2008}{Assistant 2009}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}
-	      {Encadrement des projets UNIX/C/C++ pour les étudiants de 1\iere{} année: cours,
-		animation d'ateliers, soutien, création des sujets, évaluation, et soutenance}			% arguments 3 to 6 are optional
+	      {Encadrement des projets UNIX/C/C++ pour les étudiants de 1\iere\ année: cours,
+		animation d'ateliers, soutien, création des sujets, évaluation, et soutenance}
 
 
 \section{Cursus}
-\cventry{2008}{Spécialisation Système, Réseaux et Sécurité}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}{}		% arguments 3 to 6 are optional
-\cventry{2004--2007}{Tronc commun}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}{}					% arguments 3 to 6 are optional
-\cventry{2003--2004}{1\iere{} année préparatoire}{ESGI}{\textit{Paris}}{}{}					% arguments 3 to 6 are optional
-\cventry{2002--2003}{Bac S, option mathématiques}{Lycée Georges Dumézil}{\textit{Vernon (27)}}{}{}		% arguments 3 to 6 are optional
-%\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}					% arguments 3 to 6 are optional
-
-%\section{Master thesis}
-%\cvline{title}{\emph{Title}}
-%\cvline{supervisors}{Supervisors}
-%\cvline{description}{\small Short thesis abstract}
+\cventry{2008}{Spécialisation Système, Réseaux et Sécurité}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}{}
+\cventry{2004--2007}{Tronc commun}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}{}
+\cventry{2003--2004}{1\iere\ année préparatoire}{ESGI}{\textit{Paris}}{}{}
+\cventry{2002--2003}{Bac S, option mathématiques}{Lycée Georges Dumézil}{\textit{Vernon (27)}}{}{}
 
 \section{Compétences}
 \cvlistitem{\textbf{Programmation avancée en C/C++ depuis 7 ans}, projets EPITA (micro noyau Kaneton, compilateur
@@ -105,11 +100,8 @@
 \cvlistitem{\textbf{Connaissances de nombreux langages de script}, tels que Python, Perl ou Shell}
 
 \section{Langues}
-%\cvlanguage{language 1}{Skill level}{Comment}
 \cvlanguage{Anglais}{TOEIC 775 points}{lu, parlé, écrit, plusieurs séjours en pays anglophones}
 \cvlanguage{Espagnol}{Bac}{notions}
 
 \end{document}
 
-
-%% end of file `template_en.tex'.
