--- a/cv/template/cv.tex
+++ b/cv/template/cv.tex
@@ -1,93 +1,128 @@
-%% start of file `template_en.tex'.
-%% Copyright 2006-1008 Xavier Danaux (xdanaux@gmail.com).
+%% Inicio del archivo `template-es.tex'.
+%% Copyright 2006-2012 Xavier Danaux (xdanaux@gmail.com).
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License version 1.3c,
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper]{moderncv}
+\documentclass[11pt,a4paper,sans]{moderncv}   % opciones posibles incluyen tamaño de fuente ('10pt', '11pt' and '12pt'), tamaño de papel ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' y 'landscape') y familia de fuentes ('sans' y 'roman')
 
-% moderncv themes
-\moderncvtheme[blue]{casual}                 % optional argument are 'blue' (default), 'orange', 'red', 'green', 'grey' and 'roman' (for roman fonts, instead of sans serif fonts)
-%\moderncvtheme[green]{classic}                % idem
+% temas de moderncv
+\moderncvstyle{casual}                        % las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
+\moderncvcolor{blue}                          % opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
+%\renewcommand{\familydefault}{\sfdefault}    % para seleccionar la fuente por omision, use '\sfdefault' para la fuente sans serif, '\rmdefault' para la fuente roman, o cualquier nombre de fuente
+%\nopagenumbers{}                             % elimine el comentario para suprimir la numeracion automatica de las paginas para CVs mayores a una pagina
 
-% character encoding
-\usepackage[utf8]{inputenc}                   % replace by the encoding you are using
+% codificacion de caracteres
+%\usepackage[utf8]{inputenc}                  % reemplace con su codificacion
+%\usepackage{CJKutf8}                         % si necesita usa CJK para redactar su CV en chino, japones o coreano
 
-% adjust the page margins
-\usepackage[scale=0.8]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}						% if you want to change the width of the column with the dates
-%\AtBeginDocument{\setlength{\maketitlenamewidth}{6cm}}  % only for the classic theme, if you want to change the width of your name placeholder (to leave more space for your address details
-\AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
+% ajustes para los margenes de pagina
+\usepackage[scale=0.75]{geometry}
+%\setlength{\hintscolumnwidth}{3cm}           % si desea cambiar el ando de la columna para las fechas
 
-% personal data
+% datos personales
 \firstname{John}
 \familyname{Doe}
-\birth{Birthdate}{Birthplace}
-\title{Resumé title (optional)}               % optional, remove the line if not wanted
-\address{street and number}{postcode city}    % optional, remove the line if not wanted
-\mobile{mobile (optional)}                    % optional, remove the line if not wanted
-\phone{phone (optional)}                      % optional, remove the line if not wanted
-\fax{fax (optional)}                          % optional, remove the line if not wanted
-\email{email (optional)}                      % optional, remove the line if not wanted
-\extrainfo{additional information (optional)} % optional, remove the line if not wanted
-%\photo[64pt]{picture}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
-\quote{Some quote (optional)}                 % optional, remove the line if not wanted
+\title{T\'itulo del CV (opcional)}                   % dato opcional, elimine la linea si no desea el dato
+\address{calle y n\'umero}{c\'odigo postal y ciudad} % dato opcional, elimine la linea si no desea el dato
+\mobile{+1~(234)~567~890}                            % dato opcional, elimine la linea si no desea el dato
+\phone{+2~(345)~678~901}                             % dato opcional, elimine la linea si no desea el dato
+\fax{+3~(456)~789~012}                               % dato opcional, elimine la linea si no desea el dato
+\email{john@doe.org}                                 % dato opcional, elimine la linea si no desea el dato
+\homepage{www.johndoe.com}                           % dato opcional, elimine la linea si no desea el dato
+\extrainfo{informacion adicional}                    % dato opcional, elimine la linea si no desea el dato
+\photo[64pt][0.4pt]{picture}                         % '64pt' es la altura a la que la imagen debe ser ajustada, 0.4pt es grosor del marco que lo contiene (eliga 0pt para eliminar el marco) y 'picture' es el nombre del archivo; dato opcional, elimine la linea si no desea el dato
+\quote{Alguna cita (opcional)}                       % dato opcional, elimine la linea si no desea el dato
 
-%\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
+% para mostrar etiquetas numericas en la bibliografia (por omision no se muestran etiquetas), solo es util si desea incluir citas en en CV
+%\makeatletter
+%\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
+%\makeatother
 
-
+% bibliografia con varias fuentes
+%\usepackage{multibib}
+%\newcites{book,misc}{{Libros},{Otros}}
 %----------------------------------------------------------------------------------
-%            content
+%            contenido
 %----------------------------------------------------------------------------------
 \begin{document}
+%\begin{CJK*}{UTF8}{gbsn}                     % para redactar el CV en chino usando CJK
 \maketitle
 
-\section{Education}
-\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 are optional
-\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 are optional
+\section{Formaci\'on acad\'emica}
+\cventry{a\~no--a\~no}{Grado}{Instituci\'on}{Ciudad}{\textit{Grade}}{Descripci\'on}  % Los argumentos del 3 al 6 pueden permanecer vacios
+\cventry{a\~no--a\~no}{Grado}{Instituci\'on}{Ciudad}{\textit{Grade}}{Descripci\'on}
 
-\section{Master thesis}
-\cvline{title}{\emph{Title}}
-\cvline{supervisors}{Supervisors}
-\cvline{description}{\small Short thesis abstract}
+\section{Tesis de maestr\'ia}
+\cvitem{t\'itulo}{\emph{T\'itulo}}
+\cvitem{sinodares}{Sinodales}
+\cvitem{descripci\'on}{Una breve descripci\'on de la tesis}
 
-\section{Experience}
-\subsection{Vocational}
-\cventry{year--year}{Job title}{Employer}{City}{}{Description}                % arguments 3 to 6 are optional
-\cventry{year--year}{Job title}{Employer}{City}{}{Description}                % arguments 3 to 6 are optional
-\subsection{Miscellaneous}
-\cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}% arguments 3 to 6 are optional
+\section{Experiencia}
+\subsection{Vocacional}
+\cventry{a\~no--a\~no}{t\'itulo del puesto}{Empleador}{Ciudad}{}{Descripci\'on general, no m\'as de 1 \'o 2 l\'ineas.\newline{}%
+Detalle de logros:%
+\begin{itemize}%
+\item Logro 1;
+\item Logro 2, con sub-logros:
+  \begin{itemize}%
+  \item Sub-logro (a);
+  \item Sub-logro (b), con sub-sub-logros (¡evite hacer esto!);
+    \begin{itemize}
+    \item Sub-sub-logro i;
+    \item Sub-sub-logro ii;
+    \item Sub-sub-logro iii;
+    \end{itemize}
+  \item Sub-logro (c);
+  \end{itemize}
+\item Logro 3.
+\end{itemize}}
+\cventry{a\~no--a\~no}{t\'itulo del puesto}{Empleador}{Ciudad}{}{Descripci\'on l\'inea 1\newline{}Descripci\'on l\'inea 2}
+\subsection{Miscel\'aneo}
+\cventry{a\~no--a\~no}{t\'itulo del puesto}{Empleador}{Ciudad}{}{Descripci\'on}
 
-\section{Languages}
-\cvlanguage{language 1}{Skill level}{Comment}
-\cvlanguage{language 2}{Skill level}{Comment}
-\cvlanguage{language 3}{Skill level}{Comment}
+\section{Idiomas}
+\cvitemwithcomment{Idioma 1}{nivel}{Comentario}
+\cvitemwithcomment{Idioma 2}{nivel}{Comentario}
+\cvitemwithcomment{Idioma 3}{nivel}{Comentario}
 
-\section{Computer skills}
-\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
-\cvcomputer{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
-\cvcomputer{category 3}{XXX, YYY, ZZZ}{category 6}{XXX, YYY, ZZZ}
+\section{Conocimientos de computaci\'on}
+\cvdoubleitem{categor\'ia 1}{XXX, YYY, ZZZ}{categor\'ia 4}{XXX, YYY, ZZZ}
+\cvdoubleitem{categor\'ia 2}{XXX, YYY, ZZZ}{categor\'ia 5}{XXX, YYY, ZZZ}
+\cvdoubleitem{categor\'ia 3}{XXX, YYY, ZZZ}{categor\'ia 6}{XXX, YYY, ZZZ}
 
 \section{Interests}
-\cvline{hobby 1}{\small Description}
-\cvline{hobby 2}{\small Description}
-\cvline{hobby 3}{\small Description}
-
-\renewcommand{\listitemsymbol}{-} % change the symbol for lists
+\cvitem{hobby 1}{Descripci\'on}
+\cvitem{hobby 2}{Descripci\'on}
+\cvitem{hobby 3}{Descripci\'on}
 
 \section{Extra 1}
-\cvlistitem{Item 1}
-\cvlistitem{Item 2}
-\cvlistitem[+]{Item 3}            % optional other symbol
+\cvlistitem{Tema 1}
+\cvlistitem{Tema 2}
+\cvlistitem{Tema 3}
+
+\renewcommand{\listitemsymbol}{-~}            % para cambiar el simbolo para las listas
 
 \section{Extra 2}
-\cvlistdoubleitem[\Neutral]{Item 1}{Item 4}
-\cvlistdoubleitem[\Neutral]{Item 2}{Item 5}
-\cvlistdoubleitem[\Neutral]{Item 3}{}
+\cvlistdoubleitem{Tema 1}{Tema 4}
+\cvlistdoubleitem{Tema 2}{Tema 5\cite{book1}}
+\cvlistdoubleitem{Tema 3}{}
 
+% Las publicaciones tomadas de un archivo de BibTeX sin usar multibib\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
+
+% Las publicaciones tomadas de un archivo BibTeX usando el paquete multibib
+%\section{Publicaciones}
+%\nocitebook{book1,book2}
+%\bibliographystylebook{plain}
+%\bibliographybook{publications}              % 'publications' es el nombre del archivo BibTeX
+%\nocitemisc{misc1,misc2,misc3}
+%\bibliographystylemisc{plain}
+%\bibliographymisc{publications}              % 'publications' es el nombre del archivo BibTeX
+
+%\clearpage\end{CJK*}                          % si esta redactando su CV en chino usando CJK, \clearpage es requerido por fancyhdr para que funcione correctamente con CJK, aunque esto eliminara la numeracion de pagina al dejar \lastpage como no definido
 \end{document}
 
 
-%% end of file `template_en.tex'.
+%% fin del archivo `template-es.tex'.
