--- a/cv/en/cv.tex
+++ b/cv/en/cv.tex
@@ -1,40 +1,42 @@
-%% start of file `template_en.tex'.
-%% Copyright 2006-1008 Xavier Danaux (xdanaux@gmail.com).
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License version 1.3c,
-% available at http://www.latex-project.org/lppl/.
-
-
-\documentclass[11pt,a4paper]{moderncv}
+\documentclass[11pt, a4paper]{moderncv}
 
 % moderncv themes
-%\moderncvtheme[blue]{casual}                 % optional argument are 'blue' (default), 'orange', 'red', 'green', 'grey' and 'roman' (for roman fonts, instead of sans serif fonts)
-\moderncvtheme[blue]{classic}                % idem
+\moderncvstyle{classic}												% las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
+\moderncvcolor{blue}												% opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
 
 % character encoding
-\usepackage[utf8]{inputenc}                   % replace by the encoding you are using
+\usepackage[utf8]{inputenc}											% replace by the encoding you are using
+\usepackage[english]{babel}
 
 % adjust the page margins
-\usepackage[scale=0.95]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}						% if you want to change the width of the column with the dates
-%\AtBeginDocument{\setlength{\maketitlenamewidth}{6cm}}  % only for the classic theme, if you want to change the width of your name placeholder (to leave more space for your address details
-\AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
+\usepackage[scale=0.93]{geometry}
+\AtBeginDocument{\setlength{\maketitlenamewidth}{13cm}}								% only for the classic theme, if you want
+														% to change the width of your name placeholder
+														% (to leave more space for your address details
+\AtBeginDocument{\recomputelengths}										% required when changes are made to page
+														% layout lengths
 
 % personal data
 \firstname{Olivier}
-\familyname{D\'etour}
-\title{EPITA student}               % optional, remove the line if not wanted
-\address{33 rue Croulebarbe}{75013 Paris}    % optional, remove the line if not wanted
-\mobile{+(33)6 13 15 85 55}                    % optional, remove the line if not wanted
-%\phone{phone (optional)}                      % optional, remove the line if not wanted
-%\fax{fax (optional)}                          % optional, remove the line if not wanted
-\email{detour.olivier@gmail.com}                      % optional, remove the line if not wanted
-\extrainfo{Current driving licence} % optional, remove the line if not wanted
-%\photo[64pt]{picture}                         % '64pt' is the height the picture must be resized to and 'picture' is the name of the picture file; optional, remove the line if not wanted
-\quote{curriculum vitae}                 % optional, remove the line if not wanted
+\familyname{Détour}
+\title{\textbf{Research \& Development Engineer}\newline \Large{\textit{> 6 years of professional experience}}}
+\address{84 rue Marcadet}{75018 Paris}										% optional, remove the line if not wanted
+\mobile{+33 6 13 15 85 55}											% optional, remove the line if not wanted
+%\phone{phone (optional)}											% optional, remove the line if not wanted
+%\fax{fax (optional)}												% optional, remove the line if not wanted
 
-\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
+\email{detour.olivier@gmail.com}										% optional, remove the line if not wanted
+\extrainfo{Valid driving license}										% optional, remove the line if not wanted
+
+\quote{Resume}													% optional, remove the line if not wanted
+
+%\photo[64pt]{picture}												% '64pt' is the height the picture must be resized
+														% to and 'picture' is the name of the picture file;
+
+														% optional, remove the line if not wanted
+
+\nopagenumbers{}												% uncomment to suppress automatic page numbering
+														% for CVs longer than one page
 
 
 %----------------------------------------------------------------------------------
@@ -43,63 +45,90 @@
 \begin{document}
 \maketitle
 
+\section{Experience}
+\subsection{Professional}
+\cventry{2015--Today}{Infrastructure \& Network Engineer}{CodeCase Software}{\textit{La Defense}}{}
+{
+	\begin{itemize}
+		\renewcommand{\labelitemi}{$\bullet$  }
+		\item Specify requirements of the CodeCase Software's infrastructure.
+		\item Migrate old virtualization solution to Citrix XenServer solution.
+	\end{itemize}
+}
+\cventry{2014--Today}{Research \& Development Engineer}{CodeCase Software}{\textit{La Defense}}{}
+{
+	\begin{itemize}
+		\renewcommand{\labelitemi}{$\bullet$  }
+		\item Massive improvement of the reverse engineering core:
+		\begin{itemize}
+			\item reduction of memory footprint of the call binder;
+			\item performance improvement of the type unicity manager.
+		\end{itemize}
+		\item Creation of a NoSQL javascript library based on MongoDB.
+	\end{itemize}
+}
+\cventry{2014--Today}{Consulting Engineer}{CodeCase Software}{\textit{La Defense}}{}
+{
+	\begin{itemize}
+		\renewcommand{\labelitemi}{$\bullet$  }
+		\item Gap analysis of an old VB6 application at TF1 Publicit\'e
+		\item Refactoring of an old Delphi application into a Java J2EE application at BREDBDD
+		\item Refactoring of an old VB6 application into a .NET4.0 WCF application at TF1 Publicit\'e
+		\item Refactoring of a pricing library in order to make it independant at CTY
+	\end{itemize}
+}
+\cventry{2009--2014}{Research \& Development Engineer}{Thales Communications \& Security}{\textit{Gennevilliers}}{}
+{
+	\begin{itemize}
+		\renewcommand{\labelitemi}{$\bullet$  }
+		\item Creation of a VoIP abstraction API over SIP/H223 and implementation of associated interfacing software
+			components.
+		\item Implementation of \textbf{RFC 6051} (IPv6 Addressing of IPv4/IPv6 Translators) and \textbf{RFC 6145} (IP/ICMP/v4/v6
+			Translation Algorithm) in kernel Linux.
+		\item Implementation of a packets segmentation module with acknowledgments and \textbf{FEC} (Forward Error Correction)
+			mechanisms in a \textbf{Linux Netdevice}.
+		\item Implementation of a point-to-multipoint transmission and neighbor discovery protocol.
+		\item Implementation of a reduction algorithm for multi-criteria topology, developed in \textbf{C++11}.
+		\item Prototype of an advanced Linux-based IP forwarder, providing casting mode like \textbf{XCast} or \textbf{Geocast},
+			by using different routing mechanisms (multi-criteria algorithm).
+		\item Study of Netgraph framework for Linux 3.0 provided by \textbf{LANA} (Lightweight Autonomic Network Architecture),
+			and implementation in a modular design for a tactical router.
+	\end{itemize}
+}
+\cventry{2009}{Final year internship}{Thales Communications \& Security}{\textit{Colombes}}{}
+{
+	Porting Linux on \textbf{Cavium Octeon} architecture (MIPS-based network services processors)
+}
+
+\subsection{Academic}
+\cventry{2011}{Substitute teacher}{ENSTA}{\textit{Paris}}{}
+		{C Language learning for first-year students with the project \textit{MiniNetFilter}}
+\cventry{2008}{Teaching Assistant}{EPITA}{\textit{Le Kremlin-Bic\^etre}}{}
+		{UNIX/C/C++ introductory course for first-year students, course syllabus preparation: lectures, lab sessions,
+			supplemental tutoring, exam questions redaction (written/oral), students evaluation}
+
+\newpage
 \section{Education}
-\cventry{2002--2003}{Baccalaur\'eat S stream, specialization mathematics}{Lyc\'ee Georges Dum\'ezil}{}{\textit{Vernon (27)}}{}  % arguments 3 to 6 are optional
-\cventry{2003--2004}{First year of preparatory classes}{ESGI}{}{\textit{Paris 75019}}{}  % arguments 3 to 6 are optional
-\cventry{2004--2006}{First 2 years of preparatory classes}{EPITA}{}{\textit{Villejuif 94800}}{}  % arguments 3 to 6 are optional
-\cventry{2006--2007}{First year of engineering studies}{EPITA}{}{\textit{Le Kremlin-Bic\^etre 94270}}{}  % arguments 3 to 6 are optional
-\cventry{2008}{Specialization Systems, Networks and Security}{EPITA}{}{\textit{Le Kremlin-Bic\^etre 94270}}{}  % arguments 3 to 6 are optional
+\cventry{2004--2009}{EPITA}{System, Network \& Security specialization}
+			{\textit{Le Kremlin-Bic\^etre}}{}{}
+\cventry{2002--2003}{Baccalaureate}{Science stream, mathematics specialization}
+			{Georges Dumézil high school, \textit{Vernon (27)}}{}{}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 are optional
 
-%\section{Master thesis}
-%\cvline{title}{\emph{Title}}
-%\cvline{supervisors}{Supervisors}
-%\cvline{description}{\small Short thesis abstract}
-
-\section{Employement history}
-\subsection{Jobs}
-\cventry{2003--2004}{Temporary works}{}{Vernon}{}{Inventories in hyper-stores}                % arguments 3 to 6 are optional
-\cventry{2006}{Internship in an IT department}{SGT}{Champs-sur-Marne}{}{Installation of computers for customers of the company}                % arguments 3 to 6 are optional
-\cventry{2007}{Internship before specialization in EPITA}{Ordissimo}{Paris}{}{Development of the file manager Sfiler in C++}                % arguments 3 to 6 are optional
-\subsection{Tutoring}
-%\cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}% arguments 3 to 6 are optional
-\cventry{2005--2006}{Mathematics support}{}{}{}{Courses for a high school student}% arguments 3 to 6 are optional
-\cventry{2008}{Assistant YAKA/ACU 2009}{}{}{}{Tutoring in EPITA}% arguments 3 to 6 are optional
-
-\section{Computing}
-%\cvcomputer{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
-\cvcomputer{Languages:}{C, C++, Java, Ruby, Delphi, Caml, ASM, \LaTeX, ScriptShell (Unix), Python, Sed/Awk, Flex/Bison, Autotools}{Operating System:}{Linux (Gentoo, Debian, Arch\dots), BSD (OpenBSD, FreeBSD, NetBSD), Windows (XP, 2003, Vista)}
-\cvcomputer{EPITA Projects:}{Shell (42sh), Compiler (Tiger), Micro kernel (Kaneton)}{}{}
+\section{Skills}
+\cvlistitem{\textbf{Advanced programming skills in C/C++ for 7 years}, educational and professional projects}
+\cvlistitem{\textbf{Advanced network programming skills in the Linux kernel}, mastery of proficient in Linux's network stack}
+\cvlistitem{\textbf{Strong network and security programming skills}, acquired through project responsibilities in Thales}
+\cvlistitem{\textbf{Strong embedded architectures skills}, internship and projects on MIPS-based processors
+		(Cavium Octeon) \& PowerPC-based (PowerQUICC II \& III), performance tests on ARM-based processors
+		(Freescale P1010, iMX6, \& Marvell OMAP 3530) and personal projects on Marvell Kirkwood (IPSec gateway)}
+\cvlistitem{\textbf{Good network and security design concepts}, taking part of many design task forces to work on
+		embedded system architecture with performance and security constraints.
+\cvlistitem{\textbf{Strong script language skills}, such as Python, Perl, Ruby or Bash}
 
 \section{Languages}
-%\cvlanguage{language 1}{Skill level}{Comment}
 \cvlanguage{French}{Mother tongue}{}
-\cvlanguage{English}{Fluent, TOEIC 775 points}{read, spoken, writen, many trips in English speaking countries}
-\cvlanguage{Spanish}{High school level}{}
-
-\section{Hobbies \& Interests}
-\cvline{Sport}{\small Basket Ball: Regular practice in Paris, Inline skating with friends}
-\cvline{Cinema}{\small Many kinds}
-\cvline{Music}{\small Many kinds}
-
-%\renewcommand{\listitemsymbol}{-} % change the symbol for lists
-
-%\section{Extra 1}
-%\cvlistitem{Item 1}
-%\cvlistitem{Item 2}
-%\cvlistitem[+]{Item 3}            % optional other symbol
-
-%\section{Extra 2}
-%\cvlistdoubleitem[\Neutral]{Item 1}{Item 4}
-%\cvlistdoubleitem[\Neutral]{Item 2}{Item 5}
-%\cvlistdoubleitem[\Neutral]{Item 3}{}
-
-% Publications from a BibTeX file
-%\nocite{*}
-%\bibliographystyle{plain}
-%\bibliography{publications}       % 'publications' is the name of a BibTeX file
+\cvlanguage{English}{TOEIC 775 points}{fluent, many trips in English speaking countries}
+\cvlanguage{Spanish}{Baccalaureate level}{Basic level}
 
 \end{document}
-
-
-%% end of file `template_en.tex'.
